--- a/res/layout/activity_connecting.xml
+++ b/res/layout/activity_connecting.xml
@@ -23,4 +23,11 @@
         android:layout_alignParentRight="true"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
+    <ProgressBar
+        android:id="@+id/progressBar1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/connectingTextView"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
