--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -54,6 +54,21 @@
             />
         
         <TextView
+            android:id="@+id/show_weather"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="20dp"
+            android:text="@string/menu_Weather"
+            android:textSize="20sp" />
+        
+        <View 
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#FFCCCCCC"
+            />
+        
+        <TextView
             android:id="@+id/show_settings"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
