--- a/res/layout/activity_weather.xml
+++ b/res/layout/activity_weather.xml
@@ -4,23 +4,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-   <LinearLayout
+   <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:layout_height="match_parent" >
 
-        <TabWidget
+       <TabWidget
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0"
             android:orientation="horizontal" />
 
-        <FrameLayout
+       <FrameLayout
             android:id="@+id/tabFrameLayout"
+            android:layout_below="@+id/tabs"
+            android:paddingTop="56dp"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
-    </LinearLayout>
+            android:layout_height="wrap_content" />
+
+    </RelativeLayout>
 
 </android.support.v4.app.FragmentTabHost>
