--- a/res/layout/activity_settings.xml
+++ b/res/layout/activity_settings.xml
@@ -19,4 +19,10 @@
         android:layout_height="wrap_content"
         android:text="@string/settings_keepscreenon" />
 
+    <CheckBox
+        android:id="@+id/metricUnitsCheckBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/settings_metricunits" />
+
 </LinearLayout>
