--- a/res/layout/activity_connecting.xml
+++ b/res/layout/activity_connecting.xml
@@ -4,6 +4,15 @@
     android:layout_height="match_parent" >
 
     <TextView
+        android:id="@+id/tipText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"
+        android:padding="20dp"
+        android:textSize="22sp" />
+
+    <TextView
         android:id="@+id/connectingTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
