--- a/res/layout/activity_settings.xml
+++ b/res/layout/activity_settings.xml
@@ -25,4 +25,11 @@
         android:layout_height="wrap_content"
         android:text="@string/settings_metricunits" />
 
+    <Button
+        android:id="@+id/clearMapsButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/clear_maps_folder" />
+
+
 </LinearLayout>
