--- a/res/layout/activity_map_download.xml
+++ b/res/layout/activity_map_download.xml
@@ -38,13 +38,10 @@
 		android:id="@+id/downloadFinishButton"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_alignParentBottom="true"
-		android:layout_alignParentEnd="true"
-		android:layout_alignParentLeft="true"
-		android:layout_alignParentRight="true"
-		android:layout_alignParentStart="true"
 		android:enabled="false"
 		android:text="@string/Finish_message"
-		/>
+		android:layout_below="@+id/progressMapDLBar"
+		android:layout_alignParentLeft="true"
+		android:layout_alignParentStart="true"/>
 
 </RelativeLayout>
