push clear maps button down a little

--- a/res/layout/activity_settings.xml
+++ b/res/layout/activity_settings.xml
@@ -27,6 +27,11 @@
         android:layout_height="wrap_content"
         android:text="@string/settings_metricunits" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        />
+
     <Button
         android:id="@+id/clearMapsButton"
         android:layout_width="match_parent"
